facets.cloud/yaml_files/blueappservice.yaml
apiVersion: v1
kind: Service
metadata:
  name: blue-app-service
  labels:
    app: blue-app
    ingress-color: blue
spec:
  type: NodePort
  selector:
    app: blue-app
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
