facets.cloud/yaml_files/greenappservice.yaml
apiVersion: v1
kind: Service
metadata:
  name: green-app-service
spec:
  type: ClusterIP
  selector:
    app: green-app
  ports:
  - port: 80
    targetPort: 8081
