facets.cloud/yaml_files/blueingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: blue-ingress
  namespace: default
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/canary: "true"
    nginx.ingress.kubernetes.io/canary-weight: "75"
    kubernetes.io/elb.port: '80'
spec:
  rules:
    # - host: frontend.minikube 
    - http:
        paths:
          - path: '/'
            pathType: Prefix 
            backend:
              service:
                name: blue-app-service
                port:
                  number: 8080
