facets.cloud/yaml_files/greeningress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: green-ingress
  namespace: default
  annotations:
    kubernetes.io/ingress.class: nginx # Use the Nginx ingress.
    kubernetes.io/elb.port: '80'
spec:
  rules:
    # - host: frontend.minikube.local
    - http:
        paths:
          - path: '/'
            pathType: Prefix  
            backend:
              service:
                name: green-app-service      # Specify old-nginx as the backend service.
                port:
                  number: 8081
